<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ii"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MenuSuhu"
    tools:showIn="@layout/app_bar_menu_suhu">

    <ScrollView
        android:layout_width="311dp"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text=" Rumus Converter Suhu"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.572"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.017" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="360dp"
                android:layout_height="114dp"
                android:layout_marginTop="45dp"
                android:padding="5dp"
                android:text="@string/rumussatu"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView12"
                android:layout_width="360dp"
                android:layout_height="82dp"
                android:layout_marginTop="120dp"
                android:padding="5dp"
                android:text="@string/r"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="360dp"
                android:layout_height="82dp"
                android:layout_marginTop="140dp"
                android:padding="5dp"
                android:text="@string/di"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView14"
                android:layout_width="360dp"
                android:layout_height="82dp"
                android:layout_marginTop="160dp"
                android:padding="5dp"
                android:text="@string/R"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView15"
                android:layout_width="360dp"
                android:layout_height="82dp"
                android:layout_marginTop="180dp"
                android:padding="5dp"
                android:text="@string/C"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView16"
                android:layout_width="360dp"
                android:layout_height="82dp"
                android:layout_marginTop="215dp"
                android:padding="5dp"
                android:text="@string/rumusdua"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="360dp"
                android:layout_height="82dp"
                android:layout_marginTop="290dp"
                android:padding="5dp"
                android:text="@string/f"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView18"
                android:layout_width="360dp"
                android:layout_height="82dp"
                android:layout_marginTop="310dp"
                android:padding="5dp"
                android:text="@string/diket"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView19"
                android:layout_width="360dp"
                android:layout_height="82dp"
                android:layout_marginTop="330dp"
                android:padding="5dp"
                android:text="@string/F"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView20"
                android:layout_width="360dp"
                android:layout_height="82dp"
                android:layout_marginTop="350dp"
                android:padding="5dp"
                android:text="@string/c"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="360dp"
                android:layout_height="138dp"
                android:layout_marginTop="385dp"
                android:padding="5dp"
                android:text="@string/rumustiga"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView22"
                android:layout_width="360dp"
                android:layout_height="82dp"
                android:layout_marginTop="470dp"
                android:padding="5dp"
                android:text="@string/k"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView23"
                android:layout_width="360dp"
                android:layout_height="82dp"
                android:layout_marginTop="490dp"
                android:padding="5dp"
                android:text="@string/d"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView24"
                android:layout_width="360dp"
                android:layout_height="82dp"
                android:layout_marginTop="510dp"
                android:padding="5dp"
                android:text="@string/K"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView25"
                android:layout_width="360dp"
                android:layout_height="82dp"
                android:layout_marginTop="530dp"
                android:padding="5dp"
                android:text="@string/lah"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>